modify code html css

--- a/surveyform.css
+++ b/surveyform.css
@@ -1,7 +1,16 @@
 body {
+    padding: 0;
+    margin: 0;
     background-color: rgb(5, 196, 107);
-    font-family: Tahoma;
-    position: relative;
+    font-family: Verdana;
+}
+
+form {
+    background-color: #ffffff;
+    margin: auto;
+    width: 480px;
+    padding: 2px 23px;
+    box-shadow: 3px 10px 12px -1px rgb(90, 90, 90);
 }
 
 
@@ -12,73 +21,59 @@ body {
     margin: 0;
 }
 
-.wrapper {
-    background-color: #ffffff;
-    margin: auto;
-    width: 480px;
-    height: 1130px;
-    padding: 2px 23px;
-    box-shadow: 3px 10px 12px -1px rgb(90, 90, 90);
+.form-control {
+    text-align: left;
 }
 
-label {
+/* Styling form-control Label */
+.form-control label {
     display: block;
     width: 480px;
-    margin: 10px 0;
+    margin: 15px 0 10px 0;
 }
 
-.container {
-    width: 600;
+
+
+/* Styling form-control input, select, textarea */
+.form-control input,
+.form-control select,
+.form-control textarea {
+    padding: 2px;
+    display: block;
+
 }
 
-input{
+
+.form-control input,
+.form-control textarea{
     width: 472px;
     height: 30px;
+
 }
 
-.name, .email, .age, .option {
-    margin: 25px 0;
+.form-control select{
+    width: 100%;
+    height: 40px;
 }
 
-select {
-    width: 480px;
-    height: 37px;
+/*Styling form-control rRadio button and Checkbox*/
+.form-control input[type='radio'],
+.form-control input[type='checkbox'] {
+    width: auto;
+    display: inline-block;
+    height: auto;
 }
 
-.recommend{
-    margin: 10px 0 30px 0;
-}
-
-.known {
-    margin: 0 0 30px 0;
-}
-
-input.radio, input.checkbox{
-    width: 15px;
-    height: 10px;
-}
-
-.list {
-    margin: 11px 0;
-}
-
-textarea{
-    width: 475px;
-    height: 54px;
-    margin: 5px 0;
-}
-
-input.submit__btn{
+/*Styling Button*/
+button{
     background-color: rgb(5, 196, 107);
     width: 480px;
     height: 40px;
     font-size: 20px;
     border-width: thin;
-}
-
-.submit{
     margin: 40px 0;
 }
+
 
 footer{
     margin: 50px 0;
